# mcp-agentic-rag

./: .env.example  .gitignore  pyproject.toml  pytest.ini  server.py
src/cli/: __init__.py  validate.py
src/mcp_agentic_rag/: __init__.py
src/mcp_agentic_rag/config/: __init__.py  settings.py
src/mcp_agentic_rag/models/: __init__.py  base.py  query.py  routing_decision.py  search_response.py  types.py  vector_match.py  web_result.py
src/mcp_agentic_rag/server/: __init__.py  mcp_server.py
src/mcp_agentic_rag/services/: __init__.py  vector_retrieval.py  web_search.py
tests/: conftest.py
tests/contract/: test_intelligent_query_tool.py  test_migration_tool.py  test_ml_faq_tool.py  test_router_tool.py  test_vector_search_tool.py  test_web_search_tool.py
tests/integration/: test_error_handling.py  test_fallback_flow.py  test_hybrid_results.py  test_ml_query_flow.py  test_performance.py  test_vector_hit_flow.py
