[project]
name = "mcp-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "llama-index-embeddings-huggingface>=0.6.1",
    "mcp[cli]>=1.14.1",
    "python-dotenv>=1.1.1",
    "qdrant-client[fastembed]>=1.15.1",
]
